# hearbook

./: .gitignore
.cursor/rules/: android.mdc
android/: CHANGELOG.md  README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/eu/haintech/hearbook/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/eu/haintech/hearbook/: HearBookApplication.kt  MainActivity.kt
android/app/src/main/java/eu/haintech/hearbook/di/: DatabaseModule.kt
android/app/src/main/java/eu/haintech/hearbook/model/: AppDatabase.kt  Book.kt  BookDao.kt  BookRepository.kt  BookStatus.kt
android/app/src/main/java/eu/haintech/hearbook/ui/addbook/: AddBookFragment.kt  AddBookViewModel.kt
android/app/src/main/java/eu/haintech/hearbook/utils/: FileManager.kt
android/app/src/main/res/layout/: fragment_add_book.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/eu/haintech/hearbook/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
docs/: Analiza Techniczna i Architektura.md  Analiza i Wybór API OCR-TTS.md  Plan Prac Lektor Książek.md  Projekt Architektury Szczegółowej.md  Projekt UI_UX Dostępność.md  Specyfikacja projektu  Lektor Książek.md  gen_img.py  pyproject.toml
ocr-test/: main.py  out.txt  pyproject.toml
tts-test/: main.py  pyproject.toml
(+11 files in other folders)
